--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-    
     <title>RPS - Multiplayer</title>
 </head>
 <body >
@@ -24,35 +23,42 @@
         <button type = "button" class = "btn" id = "start">
             Start
         </button>
-        <div class = "comm">
-        </div>
+        <div class = "comm"></div>
+        <div class = "name-comm"></div>
+        <div class = "turn-comm"></div>
+        
     </div>
     <div class="row ">
         <div class="col-6">
             <section class="player number1 ">
-                <h3 class="names player1-name">player1</h3>
-                <div class="img rock" ><img class="image" src="/assets/images/rocks-to-identify.jpg"></div>
-                <div class="img paper" ><img class="image" src="/assets/images/paper2.jpeg"></div>
-                <div class="img scissors" ><img class="image" src="/assets/images/scissors.jpeg"></div>
-                <div class="results pl1">wins:  Loses:</div>
+                <div class="player1" id="player1">
+                    <h3 class="names player1-name">player1</h3>
+                    <div class="choice1"></div>
+                    <div class="img1" id="r"><img class="image" src="/assets/images/rocks-to-identify.png"></div>
+                    <div class="img1" id="p"><img class="image" src="/assets/images/paper2.png"></div>
+                    <div class="img1" id="s"><img class="image" src="/assets/images/scissors.png"></div>
+                    <div class="results pl1">wins:  Loses:</div>
+                </div>
             </section>
             </div>
             <div class=" col-6">
             <section class="player number2">
-                <h3 class="names player2-name">player2</h3>
-                <div class="img rock" ><img class="image" src="/assets/images/rocks-to-identify.jpg"></div>
-                <div class="img paper" ><img class="image" src="/assets/images/paper2.jpeg"></div>
-                <div class="img scissors" ><img class="image" src="/assets/images/scissors.jpeg"></div>
-                <div class="results pl-2">wins:  Loses:</div>
+                <div class="player2" id="player1">
+                    <h3 class="names player2-name">player2</h3>
+                    <div class="choice2"></div>
+                    <div class="img2" id="r"><img class="image" src="/assets/images/rocks-to-identify.png"></div>
+                    <div class="img2" id="p"><img class="image" src="/assets/images/paper2.png"></div>
+                    <div class="img2" id="s"><img class="image" src="/assets/images/scissors.png"></div>
+                    <div class="results pl2">wins:  Loses:</div>
+                    </div>
             </section> 
         </div>
     </div> 
     <div class="msg-box">
-        <textarea class="text-area">
-        </textarea>
-        <div>
-        <input class="msg-input">
-        <button type="submit" class="msg-button">SEND</button>
+        <div class="msg-form">
+            <div class="text-area"></div>
+            <input class="msg-input">
+            <button type="submit" class="msg-button">SEND</button>
         </div>
     </div>
 </div> 
