--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <div class = "comm"></div>
         <div class = "name-comm"></div>
         <div class = "turn-comm"></div>
-        
+        <br>
+        <button type = "button" class = "btn btn-default center-block" id = "reset">
+            Try Again
+        </button>
     </div>
     <div class="row ">
         <div class="col-6">
@@ -34,9 +37,11 @@
                 <div class="player1" id="player1">
                     <h3 class="names player1-name">player1</h3>
                     <div class="choice1"></div>
-                    <div class="img1" id="r"><img class="image" src="/assets/images/rocks-to-identify.png"></div>
-                    <div class="img1" id="p"><img class="image" src="/assets/images/paper2.png"></div>
-                    <div class="img1" id="s"><img class="image" src="/assets/images/scissors.png"></div>
+                    <div class="choices1">
+                    <div class="img1" id="r"><img class="image" src="assets/images/rocks-to-identify.png"></div>
+                    <div class="img1" id="p"><img class="image" src="assets/images/paper2.png"></div>
+                    <div class="img1" id="s"><img class="image" src="assets/images/scissors.png"></div>
+                    </div>
                     <div class="results pl1">wins:  Loses:</div>
                 </div>
             </section>
@@ -46,9 +51,11 @@
                 <div class="player2" id="player1">
                     <h3 class="names player2-name">player2</h3>
                     <div class="choice2"></div>
-                    <div class="img2" id="r"><img class="image" src="/assets/images/rocks-to-identify.png"></div>
-                    <div class="img2" id="p"><img class="image" src="/assets/images/paper2.png"></div>
-                    <div class="img2" id="s"><img class="image" src="/assets/images/scissors.png"></div>
+                    <div class="choices2">
+                    <div class="img2" id="r"><img class="image" src="assets/images/rocks-to-identify.png"></div>
+                    <div class="img2" id="p"><img class="image" src="assets/images/paper2.png"></div>
+                    <div class="img2" id="s"><img class="image" src="assets/images/scissors.png"></div>
+                    </div>
                     <div class="results pl2">wins:  Loses:</div>
                     </div>
             </section> 
