--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div> 
     <div class="msg-box">
         <div class="msg-form">
-            <div class="text-area"></div>
+            <div class="panel"></div>
             <input class="msg-input">
             <button type="submit" class="msg-button">SEND</button>
         </div>
